# PyQt-Template

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml  setup.py
resources/: resources.qrc
resources/i18n/: de.ts  kr.ts
src/app/: __main__.py  resources_rc.py
src/app/const/: app.py
src/app/ui/: main_window.py  sample_widgets.py
src/app/utils/: logging.py
src/app/widgets/: main_window.py
ui/: main_window.ui  sample_widgets.ui
