
[project]
name = "app"
version = "1.0.0"
description = "PyQt/PySide6 GUI Template"
readme = "README.md"
authors = [{ name = "Lan N. H.", email = "nguyenhuylan84@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["cx-freeze>=8.6.3", "pyside6>=6.11.0"]

[project.scripts]
app = "app.__main__:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
